--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#111111"
+    android:background="@color/black"
     tools:context=".MainActivity">
 
 
@@ -14,7 +14,7 @@
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
 
         android:text="x^3"
         android:textColor="@color/red"
@@ -27,7 +27,7 @@
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="x^2"
 
         android:textColor="@color/red"
@@ -41,7 +41,7 @@
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="√"
         android:textColor="@color/red"
         android:textSize="22dp"
@@ -53,8 +53,7 @@
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="CE"
         android:textColor="@color/red"
         android:textSize="20dp"
@@ -67,7 +66,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="ANS"
         android:textColor="@color/red"
         android:textSize="20dp"
@@ -79,13 +78,12 @@
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="AC"
         android:textColor="@color/red"
         android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/delbtn"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="@+id/view" />
 
     <Button
         android:id="@+id/plusbtn"
@@ -93,7 +91,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="+"
         android:textColor="@color/red"
         android:textSize="22dp"
@@ -106,7 +104,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="–"
         android:textColor="@color/red"
         android:textSize="22dp"
@@ -118,13 +116,12 @@
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="×"
         android:textColor="@color/red"
         android:textSize="22dp"
         app:layout_constraintStart_toEndOf="@+id/divbtn"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="@+id/view" />
 
     <Button
         android:id="@+id/eqbtn"
@@ -146,7 +143,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="3"
         android:textColor="@color/white"
         android:textSize="23dp"
@@ -160,7 +157,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="6"
         android:textColor="@color/white"
         android:textSize="23dp"
@@ -173,7 +170,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="9"
         android:textColor="@color/white"
         android:textSize="23dp"
@@ -186,7 +183,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="."
         android:textColor="@color/white"
         android:textSize="23dp"
@@ -199,7 +196,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="2"
         android:textColor="@color/white"
         android:textSize="23dp"
@@ -211,13 +208,12 @@
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="DEL"
         android:textColor="@color/red"
         android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/perc"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="@+id/view" />
 
     <Button
         android:id="@+id/btn5"
@@ -225,7 +221,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="5"
         android:textColor="@color/white"
         android:textSize="23dp"
@@ -238,7 +234,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="8"
         android:textColor="@color/white"
         android:textSize="23dp"
@@ -251,7 +247,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="0"
         android:textColor="@color/white"
         android:textSize="23dp"
@@ -264,7 +260,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="1"
         android:textColor="@color/white"
         android:textSize="23dp"
@@ -277,7 +273,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="4"
         android:textColor="@color/white"
         android:textSize="23dp"
@@ -290,7 +286,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="7"
         android:textColor="@color/white"
         android:textSize="23dp"
@@ -301,8 +297,8 @@
         android:id="@+id/textView"
         android:layout_width="800dp"
         android:layout_height="45dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="2dp"
         android:textColor="@color/red"
         android:textSize="35dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -313,8 +309,7 @@
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="÷"
         android:textColor="@color/red"
         android:textSize="22dp"
@@ -325,19 +320,31 @@
         android:id="@+id/perc"
         android:layout_width="130dp"
         android:layout_height="50dp"
-        android:layout_marginTop="4dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="%"
         android:textColor="@color/red"
         android:textSize="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/view"
         tools:layout_editor_absoluteX="5dp" />
+
+    <View
+
+        android:id="@+id/view"
+        android:layout_width="780dp"
+        android:layout_height="0.5dp"
+
+        android:layout_marginStart="30dp"
+
+        android:background="@color/grey"
+        app:layout_constraintBottom_toTopOf="@+id/cebtn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"></View>
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="190dp"
         android:layout_height="30dp"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="4dp"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
