--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#111111"
+    android:background="@color/black"
     tools:context=".MainActivity">
 
 
@@ -14,7 +14,7 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="ANS"
         android:textColor="@color/red"
         android:textSize="23dp"
@@ -25,12 +25,12 @@
         android:id="@+id/acbtn"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:layout_marginTop="12dp"
-        android:backgroundTint="#111111"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/black"
         android:text="AC"
         android:textColor="@color/red"
         android:textSize="23dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/view"
         tools:layout_editor_absoluteX="5dp" />
 
     <Button
@@ -39,7 +39,7 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:textColor="@color/red"
         android:text="+"
         android:textSize="30dp"
@@ -52,7 +52,7 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="–"
         android:textColor="@color/red"
         android:textSize="30dp"
@@ -65,7 +65,7 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="×"
         android:textColor="@color/red"
         android:textSize="30dp"
@@ -92,7 +92,7 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:textColor="@color/white"
         android:text="3"
         android:textSize="35dp"
@@ -106,7 +106,7 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:textColor="@color/white"
         android:text="6"
         android:textSize="35dp"
@@ -119,7 +119,7 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:textColor="@color/white"
         android:text="9"
         android:textSize="35dp"
@@ -132,7 +132,7 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="."
         android:textColor="@color/white"
         android:textSize="35dp"
@@ -145,7 +145,7 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:textColor="@color/white"
         android:text="2"
         android:textSize="35dp"
@@ -156,14 +156,14 @@
         android:id="@+id/delbtn"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:backgroundTint="#111111"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/black"
         android:text="DEL"
         android:textColor="@color/red"
         android:textSize="23dp"
         app:layout_constraintStart_toEndOf="@+id/acbtn"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="@+id/view" />
 
     <Button
         android:id="@+id/btn5"
@@ -171,7 +171,7 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:textColor="@color/white"
         android:text="5"
         android:textSize="35dp"
@@ -184,7 +184,7 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:textColor="@color/white"
         android:text="8"
         android:textSize="35dp"
@@ -197,7 +197,7 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:text="0"
         android:textColor="@color/white"
         android:textSize="35dp"
@@ -209,7 +209,7 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:textColor="@color/white"
         android:text="1"
         android:textSize="35dp"
@@ -221,7 +221,7 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:textColor="@color/white"
         android:text="4"
         android:textSize="35dp"
@@ -233,56 +233,68 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
+        android:backgroundTint="@color/black"
         android:textColor="@color/white"
         android:text="7"
         android:textSize="35dp"
         app:layout_constraintTop_toBottomOf="@+id/acbtn"
         tools:layout_editor_absoluteX="5dp" />
 
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="370dp"
         android:layout_height="80dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="216dp"
         android:textColor="@color/red"
         android:textSize="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+
+        android:id="@+id/view"
+        android:layout_width="350dp"
+        android:layout_height="0.5dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="9dp"
+        android:background="@color/grey"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"></View>
+
     <Button
         android:id="@+id/divbtn"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
-        android:backgroundTint="#111111"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/black"
         android:text="÷"
         android:textColor="@color/red"
         android:textSize="30dp"
         app:layout_constraintStart_toEndOf="@+id/perc"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="@+id/view" />
 
     <Button
         android:id="@+id/perc"
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:backgroundTint="#111111"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/black"
         android:text="%"
         android:textColor="@color/red"
         android:textSize="25dp"
         app:layout_constraintStart_toEndOf="@+id/delbtn"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="@+id/view" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="170dp"
         android:layout_height="40dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="156dp"
         android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
